refactor: Further JDK17 updates.